[gd_scene load_steps=28 format=2]

[ext_resource path="res://img/game over.jpg" type="Texture" id=1]
[ext_resource path="res://img/homer.png" type="Texture" id=2]
[ext_resource path="res://scripts/homer.gd" type="Script" id=3]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=4]
[ext_resource path="res://img/bart.png" type="Texture" id=5]
[ext_resource path="res://scripts/executor.gd" type="Script" id=6]
[ext_resource path="res://img/hell.jpg" type="Texture" id=7]
[ext_resource path="res://img/reiniciar.png" type="Texture" id=8]
[ext_resource path="res://img/donut_tela.png" type="Texture" id=9]
[ext_resource path="res://som/game over.wav" type="AudioStream" id=10]
[ext_resource path="res://som/grito.wav" type="AudioStream" id=11]
[ext_resource path="res://som/estilingue.wav" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "press_enter"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 668.163, 20.5405 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.1385, 395.791 )

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 359.855, 344.536, 49.3461, 46.7183 ), Rect2( 302.625, 340.448, 51.6821, 54.0179 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.6815, 25.4438 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.6346, 30.4603 )

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 191, 7, 28, 63 ), Rect2( 241, 7, 34, 63 ), Rect2( 290, 7, 30, 62 ), Rect2( 340, 6, 24, 63 ), Rect2( 382, 7, 25, 62 ), Rect2( 428, 7, 33, 63 ), Rect2( 478, 6, 24, 64 ), Rect2( 519, 6, 24, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 520, 406, 33, 64 ), Rect2( 566, 406, 41, 64 ), Rect2( 617, 406, 42, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 514, 314, 38, 65 ), Rect2( 562, 314, 44, 65 ), Rect2( 614, 314, 44, 66 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 40, 947, 45, 64 ) ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 162, 637, 31, 74 ), Rect2( 212, 639, 30, 72 ), Rect2( 261, 637, 31, 74 ), Rect2( 311, 639, 30, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.811765, 0.0784314, 0.0784314, 1 ), Color( 1, 1, 1, 1 ), Color( 0.811765, 0.0784314, 0.0784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 295, 1293, 56, 39 ), Rect2( 369, 1304, 62, 29 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=14]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.8, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 6, 5, 25, 64 ), Rect2( 45, 6, 32, 64 ), Rect2( 88, 6, 35, 64 ), Rect2( 142, 7, 29, 63 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=15]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 68, 95, 48, 56 ), Rect2( 3, 93, 44, 66 ), Rect2( 40, 947, 45, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="NodeEnd" type="Node2D"]
script = ExtResource( 4 )

[node name="Hell" type="Sprite" parent="."]
position = Vector2( 625.595, 335.63 )
scale = Vector2( 0.790707, 0.790707 )
texture = ExtResource( 7 )

[node name="Game Over" type="Sprite" parent="."]
visible = false
position = Vector2( 660.381, 312.13 )
scale = Vector2( 1.0367, 1.0367 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Game Over"]
position = Vector2( -2.50922, 132.654 )
scale = Vector2( 0.445244, 0.445244 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game Over/Sprite"]
autoplay = "press_enter"
anims/press_enter = SubResource( 1 )

[node name="paredes" type="Node2D" parent="."]

[node name="limite03" type="StaticBody2D" parent="paredes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes/limite03"]
position = Vector2( 643.873, 699.827 )
shape = SubResource( 2 )

[node name="limite02" type="StaticBody2D" parent="paredes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes/limite02"]
position = Vector2( 1310.3, 334.24 )
shape = SubResource( 3 )

[node name="limite01" type="StaticBody2D" parent="paredes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes/limite01"]
position = Vector2( -30.7582, 340.391 )
shape = SubResource( 3 )

[node name="executor" type="Area2D" parent="."]
position = Vector2( 3311.77, 541.117 )
scale = Vector2( 4, 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="executor"]
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 359.855, 344.536, 49.3461, 46.7183 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="executor"]
autoplay = "voando"
anims/voando = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="executor"]
shape = SubResource( 5 )

[node name="game_over" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 647.185, 405.468 )
stream = ExtResource( 10 )
volume_db = -5.361
autoplay = true
attenuation = 0.120742
__meta__ = {
"_edit_group_": true
}

[node name="homer" type="KinematicBody2D" parent="."]
position = Vector2( 627.52, -384.147 )
scale = Vector2( 2, 2 )
z_index = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="homer"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 191, 7, 28, 63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="homer"]
visible = false
position = Vector2( -1.22176, -1.22176 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="homer"]
position = Vector2( 24.5781, -41.6161 )
scale = Vector2( 0.5, 0.5 )

[node name="origem_tiro" type="Position2D" parent="homer"]
position = Vector2( 24.251, -4.80839 )

[node name="vida1" type="Sprite" parent="homer"]
visible = false
position = Vector2( -258.913, -197.923 )
scale = Vector2( 0.300956, 0.300956 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 360, 760, 70, 100 )

[node name="vida2" type="Sprite" parent="homer"]
visible = false
position = Vector2( -230.044, -197.825 )
scale = Vector2( 0.303943, 0.303943 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 360, 760, 70, 100 )

[node name="vida3" type="Sprite" parent="homer"]
visible = false
position = Vector2( -202.759, -198.035 )
scale = Vector2( 0.300956, 0.300956 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 360, 760, 70, 100 )

[node name="Timer" type="Timer" parent="homer"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="homer"]
anims/andando = SubResource( 7 )
anims/ataque_estilingue = SubResource( 8 )
anims/ataque_estilingue_pulando = SubResource( 9 )
anims/caindo = SubResource( 10 )
anims/comemorando = SubResource( 11 )
anims/levando_dano = SubResource( 12 )
anims/morrendo = SubResource( 13 )
anims/parado = SubResource( 14 )
anims/pulando = SubResource( 15 )

[node name="donut_tela" type="Sprite" parent="homer"]
visible = false
position = Vector2( 322.457, -203.468 )
scale = Vector2( 0.0250393, 0.029194 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="homer"]
visible = false
margin_left = 311.474
margin_top = -187.212
margin_right = 351.474
margin_bottom = -147.212
text = "1/20
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_travado" type="Timer" parent="homer"]
wait_time = 2.0

[node name="grito" type="AudioStreamPlayer2D" parent="homer"]
position = Vector2( 3.0329, 0.285239 )
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 11 )

[node name="estilingue" type="AudioStreamPlayer2D" parent="homer"]
stream = ExtResource( 12 )
volume_db = -7.704
[connection signal="body_entered" from="executor" to="executor" method="_on_executor_body_entered"]
[connection signal="timeout" from="homer/Timer" to="homer" method="_on_Timer_timeout"]
[connection signal="timeout" from="homer/Timer_travado" to="homer" method="_on_Timer_travado_timeout"]
