[gd_scene load_steps=18 format=2]

[ext_resource path="res://img/homer.png" type="Texture" id=1]
[ext_resource path="res://scripts/homer.gd" type="Script" id=2]
[ext_resource path="res://img/donut_tela.png" type="Texture" id=3]
[ext_resource path="res://som/grito.wav" type="AudioStream" id=4]
[ext_resource path="res://som/estilingue.wav" type="AudioStream" id=5]
[ext_resource path="res://cenas/cena_pausa.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.6346, 30.4603 )

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 191, 7, 28, 63 ), Rect2( 241, 7, 34, 63 ), Rect2( 290, 7, 30, 62 ), Rect2( 340, 6, 24, 63 ), Rect2( 382, 7, 25, 62 ), Rect2( 428, 7, 33, 63 ), Rect2( 478, 6, 24, 64 ), Rect2( 519, 6, 24, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 520, 406, 33, 64 ), Rect2( 566, 406, 41, 64 ), Rect2( 617, 406, 42, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 514, 314, 38, 65 ), Rect2( 562, 314, 44, 65 ), Rect2( 614, 314, 44, 66 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "caindo"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 40, 947, 45, 64 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 162, 637, 31, 74 ), Rect2( 212, 639, 30, 72 ), Rect2( 261, 637, 31, 74 ), Rect2( 311, 639, 30, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.811765, 0.0784314, 0.0784314, 1 ), Color( 1, 1, 1, 1 ), Color( 0.811765, 0.0784314, 0.0784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 295, 1293, 56, 39 ), Rect2( 369, 1304, 62, 29 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=9]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.8, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 6, 5, 25, 64 ), Rect2( 45, 6, 32, 64 ), Rect2( 88, 6, 35, 64 ), Rect2( 142, 7, 29, 63 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 68, 95, 48, 56 ), Rect2( 3, 93, 44, 66 ), Rect2( 40, 947, 45, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "levando_dano"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.929412, 0.317647, 0.0470588, 0.364706 ), Color( 1, 1, 1, 1 ), Color( 0.929412, 0.317647, 0.0470588, 0.364706 ), Color( 1, 1, 1, 1 ), Color( 0.929412, 0.317647, 0.0470588, 0.364706 ), Color( 1, 1, 1, 1 ) ]
}

[node name="NodePlayer" type="Node2D"]
__meta__ = {
"_edit_vertical_guides_": [ 68.8693 ]
}

[node name="homer" type="KinematicBody2D" parent="."]
position = Vector2( -6.0658, -0.570478 )
scale = Vector2( 2, 2 )
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="homer"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 191, 7, 28, 63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="homer"]
position = Vector2( -1.22176, -1.22176 )
shape = SubResource( 1 )

[node name="vida1" type="Sprite" parent="homer"]
position = Vector2( -258.913, -152.423 )
scale = Vector2( 0.300956, 0.300956 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 360, 760, 70, 100 )

[node name="origem_tiro" type="Position2D" parent="homer"]
position = Vector2( 24.251, -4.80839 )

[node name="vida2" type="Sprite" parent="homer"]
position = Vector2( -230.044, -152.325 )
scale = Vector2( 0.303943, 0.303943 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 360, 760, 70, 100 )

[node name="vida3" type="Sprite" parent="homer"]
position = Vector2( -202.759, -152.535 )
scale = Vector2( 0.300956, 0.300956 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 360, 760, 70, 100 )

[node name="Timer" type="Timer" parent="homer"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="homer"]
anims/andando = SubResource( 2 )
anims/ataque_estilingue = SubResource( 3 )
anims/ataque_estilingue_pulando = SubResource( 4 )
anims/caindo = SubResource( 5 )
anims/comemorando = SubResource( 6 )
anims/levando_dano = SubResource( 7 )
anims/morrendo = SubResource( 8 )
anims/parado = SubResource( 9 )
anims/pulando = SubResource( 10 )

[node name="donut_tela" type="Sprite" parent="homer"]
position = Vector2( 322.457, -157.968 )
scale = Vector2( 0.0250393, 0.029194 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="homer"]
margin_left = 318.676
margin_top = -138.0
margin_right = 358.676
margin_bottom = -98.942
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_travado" type="Timer" parent="homer"]
wait_time = 2.0

[node name="grito" type="AudioStreamPlayer2D" parent="homer"]
position = Vector2( 3.0329, 0.285239 )
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 4 )
volume_db = 15.0

[node name="estilingue" type="AudioStreamPlayer2D" parent="homer"]
stream = ExtResource( 5 )
volume_db = 10.523

[node name="AnimationPlayerDano" type="AnimationPlayer" parent="homer"]
anims/levando_dano = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="homer"]
position = Vector2( 37.7994, 0.685734 )
scale = Vector2( 0.5, 0.5 )
current = true

[node name="NodePausa" parent="homer" instance=ExtResource( 6 )]
position = Vector2( -53.1537, -173.695 )
scale = Vector2( 0.3, 0.3 )
[connection signal="timeout" from="homer/Timer" to="homer" method="_on_Timer_timeout"]
[connection signal="timeout" from="homer/Timer_travado" to="homer" method="_on_Timer_travado_timeout"]
